--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Bilal_Abouzid",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.6",
     "nodemon": "^2.0.16"
   }
 }
