--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Bilal_Abouzid",
   "license": "ISC",
   "dependencies": {
+    "create-react-app": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
