--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:5555",
+  "proxy": "http://localhost:5555",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -13,6 +13,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
